ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Product_Variant_dt__c/TBM_Product_Variant_dt__c.object-meta.xml
<CustomObject>
    <label>TBM Product Variant dt</label>
    <nameField>
        <label>Product Variant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TBM Product Variants dt</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>