ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Product_Variant_dt__c/fields/Active_Flag__c.field-meta.xml
<CustomField>
    <fullName>Active_Flag__c</fullName>
    <label>Active Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>