ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Product_Variant_dt__c/fields/Checker_Date__c.field-meta.xml
<CustomField>
    <fullName>Checker_Date__c</fullName>
    <label>Checker Date</label>
    <type>Date</type>
</CustomField>