ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Product_Variant_dt__c/fields/Checker_ID__c.field-meta.xml
<CustomField>
    <fullName>Checker_ID__c</fullName>
    <label>Checker ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>