ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Product_Variant_dt__c/fields/Dealer_Landed_Price_Min__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Landed_Price_Min__c</fullName>
    <label>Dealer Landed Price Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>