ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Product_Variant_dt__c/fields/LTV_Cap_Perc__c.field-meta.xml
<CustomField>
    <fullName>LTV_Cap_Perc__c</fullName>
    <label>LTV Cap Perc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>