ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Product_Variant_dt__c/fields/Maker_Date__c.field-meta.xml
<CustomField>
    <fullName>Maker_Date__c</fullName>
    <label>Maker Date</label>
    <type>Date</type>
</CustomField>