ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Product_Variant_dt__c/fields/Market_Value_10year__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_10year__c</fullName>
    <label>Market_Value_10year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>