ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Product_Variant_dt__c/fields/Perc_11year__c.field-meta.xml
<CustomField>
    <fullName>Perc_11year__c</fullName>
    <label>Perc 11year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>