ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Product_Variant_dt__c/fields/Product_Variant_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Variant_Code__c</fullName>
    <label>Product Variant Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>