ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Product_Variant_dt__c/fields/Segment_Grade__c.field-meta.xml
<CustomField>
    <fullName>Segment_Grade__c</fullName>
    <label>Segment Grade</label>
    <length>1</length>
    <type>Text</type>
</CustomField>