ProdIND/ProdPrograms/force-app/main/default/objects/TBM_Product_Variant_dt__c/fields/Unique_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_State_Code__c</fullName>
    <label>Unique State Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>